Make test use undertow version of var