@@ -43,4 +43,9 @@ allprojects {
 
 subprojects {
     apply plugin: 'java-library'
+
+    test {
+        jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED', '--add-opens=jdk.httpserver/com.sun.net.httpserver=ALL-UNNAMED'
+
+    }
 }
